Fix some layout issues

--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -21,7 +21,7 @@ body {
 
 /* Footer */
 
-#footer {
+#footerLinks {
     text-align: center;
 }
 
